# py-bf-mlir

./: .gitignore  .pre-commit-config.yaml  Makefile  Makefile_native  Makefile_xdsl  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
py-mlir-brainfuck-compiler/: lexer.py
py_mlir_bf_compiler_native/: __main__.py  brainfuck.lark  gen_mlir.py
py_mlir_bf_compiler_native/dialects/: free_brainfuck.py  linked_brainfuck.py
py_mlir_bf_compiler_native/rewrites/: lower_free_to_linked_bf.py  lower_linked_to_builtin.py
py_mlir_bf_compiler_xdsl/: brainfuck.lark  parser.py
py_mlir_bf_compiler_xdsl/dialects/: free_brainfuck.py
py_mlir_bf_compiler_xdsl/rewrites/: lower_linked_to_builtin.py
py_mlir_brainfuck_compiler/: __main__.py  gen_mlir.py  parser.py
py_mlir_brainfuck_compiler/dialects/: free_brainfuck.py  linked_brainfuck.py
py_mlir_brainfuck_compiler/rewrites/: lower_free_to_linked_bf.py  lower_linked_to_builtin.py
