[project]
name = "py-mlir-brainfuck-compiler"
version = "0.1.0"
description = ""
authors = [
    {name = "MaPePeR",email = "MaPePeR@users.noreply.github.com"}
]
license = {text = "AGPL"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "xdsl (>=0.55.3,<0.56.0)",
    "ply (>=3.11,<4.0)"
]

[dependency-groups]
dev = [
    "shed (>=2025.6.1,<2026.0.0)",
    "pyright (>=1.1.407,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
